test/scc/pp/errors/013.a
013.t:2:1: error: pasting '++' and '+' does not give a valid preprocessing token